--- a/proyectostem/templates/datos.html
+++ b/proyectostem/templates/datos.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Reporte de jugadores</h1>
+        <h2>Juagadores actuales</h2>
         <ul>
             {% for j in lista_jugadores%}
             <li>El jugador {{j.nombre}} ha jugado {{j.minutos_jugados}} minutos</li>
