--- a/proyectostem/templates/minutos.html
+++ b/proyectostem/templates/minutos.html
@@ -5,6 +5,7 @@
 
     </head>
     <body>
+    <ul>
         {% if user.is_authenticated %}
      <li>User: {{ user.get_username }}</li>
      <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
@@ -12,11 +13,7 @@
      <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
    {% endif %} 
   </ul>
-        <h1>Registro del jugador</h1>
-        <form action="proceso" method = "POST">
-            {% csrf_token %}
-            <input type = "text" name="nombre"/>
-            <input type="submit"/>
-        </form>
+        <h1>Minutos jugados: {{minutos}}</h1>
+        
     </body>
 </html>
