--- a/proyectostem/templates/barras.html
+++ b/proyectostem/templates/barras.html
@@ -10,10 +10,10 @@
 
         var options = {
           chart: {
-            title: 'Company Performance',
-            subtitle: 'Sales, Expenses, and Profit: 2014-2017',
+            title: {{ titulo|safe}},
+            subtitle: {{subtitulo|safe}},
           },
-          bars: 'horizontal' // Required for Material Bar Charts.
+          bars: 'vertical' // Required for Material Bar Charts.
         };
 
         var chart = new google.charts.Bar(document.getElementById('barchart_material'));
